--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ jobs:
           cd deps && ./01-download.sh && ./02-extract.sh && ./03-build.sh && ./04-copy.sh
         displayName: 'Build Image Dependencies'
       - script: |
-          sudo ./build.sh
+          sudo sh -c 'dpkg-reconfigure qemu-user-static && ./build.sh'
         displayName: 'Build Image'
       - task: CopyFiles@2
         inputs:
