Build wpilib with cmake instead of gradle
* Move java lib install to /usr/local/frc/java
* Build and install both debug and normal OpenCV libraries
* Install OpenCV cmake files
* Build OpenCV Java with version 8 target
* Build static OpenCV for static allwpilib binaries
* Move netconsoleTee install to /usr/local/frc/bin
* Move multiCameraServer default app install to /usr/local/frc/bin
* Install more FRC binaries
* Fix /home/pi/zips/java-multiCameraServer.zip owner to pi:pi

--- a/deps/examples/java-multiCameraServer/build.gradle
+++ b/deps/examples/java-multiCameraServer/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'com.github.johnrengelman.shadow'
 repositories {
     mavenCentral()
     flatDir {
-        dirs '/home/pi/javalibs', '.'
+        dirs '/usr/local/frc/java', '.'
     }
 }
 
