Use ?= instead of = in Makefile

--- a/deps/tools/Makefile
+++ b/deps/tools/Makefile
@@ -6,8 +6,8 @@ OPENCV_INSTALL?=../03-build/opencv-build/install
 EXEC_HOME?=/home/pi
 FRC_JSON?=/boot/frc.json
 DHCPCD_CONF?=/boot/dhcpcd.conf
-APP_UID=1000
-APP_GID=1000
+APP_UID?=1000
+APP_GID?=1000
 
 .PHONY: all
 .SUFFIXES:
