Build wpilibc and wpilibj and include in image
This is mainly useful for Shuffleboard and SmartDashboard classes.

--- a/deps/examples/java-multiCameraServer/build.gradle
+++ b/deps/examples/java-multiCameraServer/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     compile name: 'cscore'
     compile name: 'cameraserver'
     compile name: 'opencv-344'
+    compile name: 'wpilibj'
+    compile name: 'wpiHal'
 }
 
 wrapper {
