Revamp image to build dependencies as part of stages

--- a/azure-docker/Dockerfile
+++ b/azure-docker/Dockerfile
@@ -4,7 +4,7 @@ ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt-get -y update \
     && apt-get -y install \
-        git vim parted \
+        git vim parted pkg-config \
         quilt realpath qemu-user-static debootstrap zerofree pxz zip dosfstools \
         bsdtar libcap2-bin rsync grep udev xz-utils curl xxd file \
         build-essential cmake python3 ant sudo openjdk-8-jdk \
