--- a/deps/examples/cpp-multiCameraServer/Makefile
+++ b/deps/examples/cpp-multiCameraServer/Makefile
@@ -1,3 +1,5 @@
+DEPS_CFLAGS?=$(shell env PKG_CONFIG_PATH=/usr/local/frc/lib/pkgconfig pkg-config --cflags wpilibc)
+DEPS_LIBS?=$(shell env PKG_CONFIG_PATH=/usr/local/frc/lib/pkgconfig pkg-config --libs wpilibc)
 EXE=multiCameraServerExample
 DESTDIR?=/home/pi/
 
@@ -11,31 +13,10 @@ install: build
 clean:
 	rm ${EXE} *.o
 
-${EXE}: main.o
-	${CXX} -pthread -o $@ $< \
-	    -L/usr/local/frc/lib \
-	    -lwpilibc \
-	    -lwpiHal \
-	    -lcameraserver \
-	    -lcscore \
-	    -lntcore \
-	    -lwpiutil \
-	    -lopencv_ml \
-	    -lopencv_objdetect \
-	    -lopencv_shape \
-	    -lopencv_stitching \
-	    -lopencv_superres \
-	    -lopencv_videostab \
-	    -lopencv_calib3d \
-	    -lopencv_features2d \
-	    -lopencv_highgui \
-	    -lopencv_videoio \
-	    -lopencv_imgcodecs \
-	    -lopencv_video \
-	    -lopencv_photo \
-	    -lopencv_imgproc \
-	    -lopencv_flann \
-	    -lopencv_core
+OBJS=main.o
+
+${EXE}: ${OBJS}
+	${CXX} -pthread -g -o $@ $^ ${DEPS_LIBS} -Wl,--unresolved-symbols=ignore-in-shared-libs
 
 .cpp.o:
-	${CXX} -pthread -O -c -o $@ -I/usr/local/frc/include $<
+	${CXX} -pthread -g -Og -c -o $@ ${CXXFLAGS} ${DEPS_CFLAGS} $<
