Fix hardcoded username in Makefile

--- a/deps/tools/configServer/Makefile
+++ b/deps/tools/configServer/Makefile
@@ -1,7 +1,6 @@
 IMG_VERSION?=$(shell git describe)
 DEPS_CFLAGS?=$(shell pkg-config --cflags cscore wpiutil)
 DEPS_LIBS?=$(shell pkg-config --libs --static cscore wpiutil)
-EXEC_HOME?=/home/pi
 FRC_JSON?=/boot/frc.json
 DHCPCD_CONF?=/boot/dhcpcd.conf
 APP_UID?=1000
@@ -37,7 +36,7 @@ configServer: ${OBJS}
 	${CXX} -g -O -Wall -c -o $@ \
 	    ${CXXFLAGS} \
 	    ${DEPS_CFLAGS} \
-	    '-DEXEC_HOME="${EXEC_HOME}"' \
+	    '-DEXEC_HOME="/home${FIRST_USER_NAME}"' \
 	    '-DFRC_JSON="${FRC_JSON}"' \
 	    '-DDHCPCD_CONF="${DHCPCD_CONF}"' \
 	    '-DAPP_UID=${APP_UID}' \
