--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,11 +6,10 @@ resources:
 
 jobs:
  - job: 'Main'
-   pool:
-     vmImage: 'Ubuntu 16.04'
-
+   pool: RoboRioConnections
+   workspace:
+      clean: all
    timeoutInMinutes: 0
-
    container: pi-gen
 
    steps:
